@@ -5,6 +5,9 @@
 	* gmime/gmime-parser.c: #ifdef out the regex functionality if the
 	system does not have regex.h
 
+	* gmime/gmime-stream.h: Removed #include <unistd.h> as it isn't
+	needed there.
+
 	* gmime/gmime-part.c: Removed unused includes.
 
 	* gmime/gmime-utils.c: Only #include <sys/utsname.h> if we have
